--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -31,6 +31,7 @@ workflows:
           fi
           echo "MAPIAH_TAG=$MAPIAH_TAG" >> $CM_ENV
           echo "MAPIAH_TAG is: $MAPIAH_TAG"
+          echo "MAPIAH_TAG_PARAM is: $MAPIAH_TAG_PARAM"
 
       - name: Set INSTALLER path
         script: |
