--- a/packaging/linux/org.mapiah.mapiah.desktop
+++ b/packaging/linux/org.mapiah.mapiah.desktop
@@ -5,7 +5,7 @@ Name=Mapiah
 Comment=User friendly Therion map editor
 Categories=Graphics;
 
-Icon=org.mapiah.Mapiah
+Icon=org.mapiah.mapiah
 Exec=mapiah
 Terminal=false
 StartupWMClass=Mapiah
