--- a/AppImageBuilder.yml
+++ b/AppImageBuilder.yml
@@ -1,28 +1,21 @@
 # appimage-builder recipe see https://appimage-builder.readthedocs.io for details
 version: 1
-script:
- - rm -rf AppDir || true
- - cp -r build/linux/x64/release/bundle AppDir
- - mkdir -p AppDir/usr/share/icons/hicolor/512x512/apps/
- - mv AppDir/lib/ AppDir/usr/
- - cp assets/icons/io.github.rsevero.mapiah.png AppDir/usr/share/icons/hicolor/512x512/apps/
 AppDir:
   path: ./AppDir
   app_info:
-    id: io.github.rsevero.mapiah
+    id: org.mapiah.mapiah
     name: Mapiah
-    icon: io.github.rsevero.mapiah
-    version: latest
+    version: 0.2.5
     exec: mapiah
     exec_args: $@
   apt:
     arch: amd64
     allow_unauthenticated: true
     sources:
-    - sourceline: deb http://archive.ubuntu.com/ubuntu/ bionic main restricted universe multiverse
-    - sourceline: deb http://archive.ubuntu.com/ubuntu/ bionic-updates main restricted universe multiverse
-    - sourceline: deb http://archive.ubuntu.com/ubuntu/ bionic-backports main restricted universe multiverse
-    - sourceline: deb http://security.ubuntu.com/ubuntu bionic-security main restricted universe multiverse
+    - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy main restricted universe multiverse
+    - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy-updates main restricted universe multiverse
+    - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy-backports main restricted universe multiverse
+    - sourceline: deb http://security.ubuntu.com/ubuntu jammy-security main restricted universe multiverse
     include:
     - libgtk-3-0
     exclude:
@@ -31,6 +24,8 @@ AppDir:
     - adwaita-icon-theme
     - ubuntu-mono
   files:
+    include:
+    - lib64/ld-linux-x86-64.so.2
     exclude:
     - usr/share/man
     - usr/share/doc/*/README.*
@@ -38,23 +33,23 @@ AppDir:
     - usr/share/doc/*/NEWS.*
     - usr/share/doc/*/TODO.*
   test:
-    fedora:
+    fedora-30:
       image: appimagecrafters/tests-env:fedora-30
       command: ./AppRun
       use_host_x: true
-    debian:
+    debian-stable:
       image: appimagecrafters/tests-env:debian-stable
       command: ./AppRun
       use_host_x: true
-    arch:
+    archlinux-latest:
       image: appimagecrafters/tests-env:archlinux-latest
       command: ./AppRun
       use_host_x: true
-    centos:
+    centos-7:
       image: appimagecrafters/tests-env:centos-7
       command: ./AppRun
       use_host_x: true
-    ubuntu:
+    ubuntu-xenial:
       image: appimagecrafters/tests-env:ubuntu-xenial
       command: ./AppRun
       use_host_x: true
@@ -62,45 +57,3 @@ AppImage:
   arch: x86_64
   update-information: guess
   sign-key: None
-
-
-
-# appimage-builder recipe see https://appimage-builder.readthedocs.io for details
-# version: 1
-# AppDir:
-#   path: /home/rodrigo/devel/mapiah/AppDir
-#   app_info:
-#     id: io.github.rsevero.mapiah
-#     name: Mapiah
-#     icon: io.github.rsevero.mapiah
-#     version: 0.1.0
-#     exec: /
-#     exec_args: $@
-#   files:
-#     include:
-#     - /
-#     exclude:
-#     - usr/share/man
-#     - usr/share/doc/*/README.*
-#     - usr/share/doc/*/changelog.*
-#     - usr/share/doc/*/NEWS.*
-#     - usr/share/doc/*/TODO.*
-#   test:
-#     fedora-30:
-#       image: appimagecrafters/tests-env:fedora-30
-#       command: ./AppRun
-#     debian-stable:
-#       image: appimagecrafters/tests-env:debian-stable
-#       command: ./AppRun
-#     archlinux-latest:
-#       image: appimagecrafters/tests-env:archlinux-latest
-#       command: ./AppRun
-#     centos-7:
-#       image: appimagecrafters/tests-env:centos-7
-#       command: ./AppRun
-#     ubuntu-xenial:
-#       image: appimagecrafters/tests-env:ubuntu-xenial
-#       command: ./AppRun
-# AppImage:
-#   arch: x86_64
-#   update-information: guess
