--- a/AppImageBuilder.yml
+++ b/AppImageBuilder.yml
@@ -14,7 +14,17 @@ script: |
   rm -rf ../AppDir || true
   cp -r build/linux/x64/release/bundle ../AppDir
   mkdir -p ../AppDir/usr/share/icons/hicolor/512x512/apps
+  mkdir -p ../AppDir/usr/share/icons/hicolor/256x256/apps
+  mkdir -p ../AppDir/usr/share/icons/hicolor/128x128/apps
+  mkdir -p ../AppDir/usr/share/icons/hicolor/64x64/apps
+  mkdir -p ../AppDir/usr/share/icons/hicolor/32x32/apps
+  mkdir -p ../AppDir/usr/share/icons/hicolor/16x16/apps
   cp assets/icons/m-512x512.png ../AppDir/usr/share/icons/hicolor/512x512/apps/application-vnd.appimage.png
+  cp assets/icons/m-256x256.png ../AppDir/usr/share/icons/hicolor/256x256/apps/application-vnd.appimage.png
+  cp assets/icons/m-128x128.png ../AppDir/usr/share/icons/hicolor/128x128/apps/application-vnd.appimage.png
+  cp assets/icons/m-64x64.png ../AppDir/usr/share/icons/hicolor/64x64/apps/application-vnd.appimage.png
+  cp assets/icons/m-32x32.png ../AppDir/usr/share/icons/hicolor/32x32/apps/application-vnd.appimage.png
+  cp assets/icons/m-16x16.png ../AppDir/usr/share/icons/hicolor/16x16/apps/application-vnd.appimage.png
   mkdir -p ../AppDir/usr/share/applications
   cp packaging/linux/org.mapiah.mapiah.desktop ../AppDir/usr/share/applications
   ln -sf usr/share/icons/hicolor/512x512/apps/application-vnd.appimage.png ../AppDir/.DirIcon
