--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -44,11 +44,19 @@ jobs:
         TAG="${{ github.event_name == 'push' && github.ref_name || github.event.inputs.test_tag }}"
         TAG_NUMBER="${TAG#v}"
         sed -i "/^AppDir:/,/^[^ ]/s/^\( *version: *\).*/\1$TAG_NUMBER/" AppImageBuilder.yml
-    - name: Build AppImage using appimage-builder
-      uses: AppImageCrafters/build-appimage@master
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
       with:
-        recipe: "./AppImageBuilder.yml"
-        args: "--skip-test"
+        channel: stable
+        flutter-version: 3.32.4
+    - name: Check Flutter version
+      run: |
+        flutter --version
+    # - name: Build AppImage using appimage-builder
+      # uses: AppImageCrafters/build-appimage@master
+      # with:
+      #   recipe: "./AppImageBuilder.yml"
+      #   args: "--skip-test"
     - name: Save build Artifact
       uses: actions/upload-artifact@v4
       with:
