--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -52,11 +52,11 @@ jobs:
     - name: Check Flutter version
       run: |
         flutter --version
-    # - name: Build AppImage using appimage-builder
-      # uses: AppImageCrafters/build-appimage@master
-      # with:
-      #   recipe: "./AppImageBuilder.yml"
-      #   args: "--skip-test"
+    - name: Build AppImage using appimage-builder
+      uses: AppImageCrafters/build-appimage@master
+      with:
+        recipe: "./AppImageBuilder.yml"
+        args: "--skip-test"
     - name: Save build Artifact
       uses: actions/upload-artifact@v4
       with:
