--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -24,10 +24,13 @@ jobs:
     # - name: "Install dependencies"
     #   run: |
     #     sudo apt-get update
-    #     sudo apt-get install -y cmake ninja-build build-essential pkg-config curl file git unzip xz-utils zip libgtk-3-dev
+    #     sudo apt-get install -y appstream appstream-util libappstream-glib8 fuse libfuse2 gpg clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev curl git unzip xz-utils zip libglu1-mesa vim sudo
+    #     curl -L -o appimage-builder-x86_64.AppImage https://github.com/AppImageCrafters/appimage-builder/releases/download/v1.1.0/appimage-builder-1.1.0-x86_64.AppImage
+    #     chmod +x appimage-builder-x86_64.AppImage
+    #     sudo mv appimage-builder-x86_64.AppImage /usr/local/bin/appimage-builder
     # - name: Build flutter app
     #   run: flutter build linux --release
-    # Only validate tag format for automatic runs
+     # Only validate tag format for automatic runs
     - name: Validate tag (automatic runs only)
       if: github.event_name == 'push'
       shell: bash
@@ -49,14 +52,20 @@ jobs:
       with:
         channel: stable
         flutter-version: 3.32.4
-    - name: Check Flutter version
+    - name: Build appimage
       run: |
-        flutter --version
-    - name: Build AppImage using appimage-builder
-      uses: AppImageCrafters/build-appimage@master
-      with:
-        recipe: "./AppImageBuilder.yml"
-        args: "--skip-test"
+        sudo apt-get update
+        sudo apt-get install -y appstream appstream-util libappstream-glib8 fuse libfuse2 gpg clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev curl git unzip xz-utils zip libglu1-mesa vim sudo
+        curl -L -o appimage-builder-x86_64.AppImage https://github.com/AppImageCrafters/appimage-builder/releases/download/v1.1.0/appimage-builder-1.1.0-x86_64.AppImage
+        chmod +x appimage-builder-x86_64.AppImage
+        sudo mv appimage-builder-x86_64.AppImage /usr/local/bin/appimage-builder
+        appimage-builder --recipe AppImageBuilder.yml --skip-test --no-appstream
+    #     flutter --version
+    # - name: Build AppImage using appimage-builder
+    #   uses: AppImageCrafters/build-appimage@master
+    #   with:
+    #     recipe: "./AppImageBuilder.yml"
+    #     args: "--skip-test"
     - name: Save build Artifact
       uses: actions/upload-artifact@v4
       with:
