--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -52,13 +52,15 @@ jobs:
       with:
         channel: stable
         flutter-version: 3.32.4
-    - name: Build appimage
+    - name: Setup appimage
       run: |
         sudo apt-get update
-        sudo apt-get install -y appstream appstream-util libappstream-glib8 fuse libfuse2 gpg clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev curl git unzip xz-utils zip libglu1-mesa vim sudo
+        sudo apt-get install -y appstream appstream-util libappstream-glib8 fuse libfuse2 clang cmake ninja-build pkg-config libgtk-3-dev libglu1-mesa
         curl -L -o appimage-builder-x86_64.AppImage https://github.com/AppImageCrafters/appimage-builder/releases/download/v1.1.0/appimage-builder-1.1.0-x86_64.AppImage
         chmod +x appimage-builder-x86_64.AppImage
         sudo mv appimage-builder-x86_64.AppImage /usr/local/bin/appimage-builder
+    - name: Build appimage
+      run: |
         appimage-builder --recipe AppImageBuilder.yml --skip-test --no-appstream
     #     flutter --version
     # - name: Build AppImage using appimage-builder
