--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -55,13 +55,13 @@ jobs:
     - name: Setup appimage
       run: |
         sudo apt-get update
-        sudo apt-get install -y appstream appstream-util libappstream-glib8 fuse libfuse2 clang cmake ninja-build pkg-config libgtk-3-dev libglu1-mesa
+        sudo apt-get install -y appstream appstream-util libappstream-glib8 clang cmake ninja-build pkg-config libgtk-3-dev libglu1-mesa
         curl -L -o appimage-builder-x86_64.AppImage https://github.com/AppImageCrafters/appimage-builder/releases/download/v1.1.0/appimage-builder-1.1.0-x86_64.AppImage
         chmod +x appimage-builder-x86_64.AppImage
         sudo mv appimage-builder-x86_64.AppImage /usr/local/bin/appimage-builder
     - name: Build appimage
       run: |
-        appimage-builder --recipe AppImageBuilder.yml --skip-test --no-appstream
+        appimage-builder --recipe AppImageBuilder.yml --skip-test
     #     flutter --version
     # - name: Build AppImage using appimage-builder
     #   uses: AppImageCrafters/build-appimage@master
