--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -52,10 +52,12 @@ jobs:
       with:
         channel: stable
         flutter-version: 3.32.4
-    - name: Setup appimage
+    - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y appstream appstream-util libappstream-glib8 clang cmake ninja-build pkg-config libgtk-3-dev libglu1-mesa
+        sudo apt-get install -y appstream appstream-util libappstream-glib8 clang cmake ninja-build fuse pkg-config libgtk-3-dev libglu1-mesa
+    - name: Set up appimage
+      run: |
         curl -L -o appimage-builder-x86_64.AppImage https://github.com/AppImageCrafters/appimage-builder/releases/download/v1.1.0/appimage-builder-1.1.0-x86_64.AppImage
         chmod +x appimage-builder-x86_64.AppImage
         sudo mv appimage-builder-x86_64.AppImage /usr/local/bin/appimage-builder
