--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -63,6 +63,7 @@ jobs:
         sudo mv appimage-builder-x86_64.AppImage /usr/local/bin/appimage-builder
     - name: Build appimage
       run: |
+        echo "PWD: ${PWD}"
         appimage-builder --recipe AppImageBuilder.yml --skip-test
     #     flutter --version
     # - name: Build AppImage using appimage-builder
