--- a/AppImageBuilder.yml
+++ b/AppImageBuilder.yml
@@ -3,31 +3,25 @@ version: 1
 script: |
   set -e
   set -x
-  # echo "Cloning Mapiah..."
-  # cd $HOME
-  # git clone --depth 1 --branch main https://github.com/rsevero/mapiah.git
-  # cd mapiah
-  echo "Building Mapiah..."
   flutter config --enable-linux-desktop
   flutter build linux --release
-  echo "Copying Mapiah to AppDir..."
-  rm -rf ../AppDir || true
-  cp -r build/linux/x64/release/bundle ../AppDir
-  mkdir -p ../AppDir/usr/share/icons/hicolor/512x512/apps
-  mkdir -p ../AppDir/usr/share/icons/hicolor/256x256/apps
-  mkdir -p ../AppDir/usr/share/icons/hicolor/128x128/apps
-  mkdir -p ../AppDir/usr/share/icons/hicolor/64x64/apps
-  mkdir -p ../AppDir/usr/share/icons/hicolor/32x32/apps
-  mkdir -p ../AppDir/usr/share/icons/hicolor/16x16/apps
-  cp assets/icons/m-512x512.png ../AppDir/usr/share/icons/hicolor/512x512/apps/application-vnd.appimage.png
-  cp assets/icons/m-256x256.png ../AppDir/usr/share/icons/hicolor/256x256/apps/application-vnd.appimage.png
-  cp assets/icons/m-128x128.png ../AppDir/usr/share/icons/hicolor/128x128/apps/application-vnd.appimage.png
-  cp assets/icons/m-64x64.png ../AppDir/usr/share/icons/hicolor/64x64/apps/application-vnd.appimage.png
-  cp assets/icons/m-32x32.png ../AppDir/usr/share/icons/hicolor/32x32/apps/application-vnd.appimage.png
-  cp assets/icons/m-16x16.png ../AppDir/usr/share/icons/hicolor/16x16/apps/application-vnd.appimage.png
-  mkdir -p ../AppDir/usr/share/applications
-  cp packaging/linux/org.mapiah.mapiah.desktop ../AppDir/usr/share/applications
-  ln -sf usr/share/icons/hicolor/512x512/apps/application-vnd.appimage.png ../AppDir/.DirIcon
+  rm -rf AppDir || true
+  cp -r build/linux/x64/release/bundle AppDir
+  mkdir -p AppDir/usr/share/icons/hicolor/512x512/apps
+  mkdir -p AppDir/usr/share/icons/hicolor/256x256/apps
+  mkdir -p AppDir/usr/share/icons/hicolor/128x128/apps
+  mkdir -p AppDir/usr/share/icons/hicolor/64x64/apps
+  mkdir -p AppDir/usr/share/icons/hicolor/32x32/apps
+  mkdir -p AppDir/usr/share/icons/hicolor/16x16/apps
+  cp assets/icons/m-512x512.png AppDir/usr/share/icons/hicolor/512x512/apps/application-vnd.appimage.png
+  cp assets/icons/m-256x256.png AppDir/usr/share/icons/hicolor/256x256/apps/application-vnd.appimage.png
+  cp assets/icons/m-128x128.png AppDir/usr/share/icons/hicolor/128x128/apps/application-vnd.appimage.png
+  cp assets/icons/m-64x64.png AppDir/usr/share/icons/hicolor/64x64/apps/application-vnd.appimage.png
+  cp assets/icons/m-32x32.png AppDir/usr/share/icons/hicolor/32x32/apps/application-vnd.appimage.png
+  cp assets/icons/m-16x16.png AppDir/usr/share/icons/hicolor/16x16/apps/application-vnd.appimage.png
+  mkdir -p AppDir/usr/share/applications
+  cp packaging/linux/org.mapiah.mapiah.desktop AppDir/usr/share/applications
+  ln -sf usr/share/icons/hicolor/512x512/apps/application-vnd.appimage.png AppDir/.DirIcon
 AppDir:
   path: ./AppDir
   app_info:
