--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -56,6 +56,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y appstream appstream-util libappstream-glib8 clang cmake ninja-build fuse pkg-config libgtk-3-dev libglu1-mesa
+    - name: Build flutter app
+      run: |
+          flutter config --enable-linux-desktop
+          flutter build linux --release
     - name: Set up appimage
       run: |
         curl -L -o appimage-builder-x86_64.AppImage https://github.com/AppImageCrafters/appimage-builder/releases/download/v1.1.0/appimage-builder-1.1.0-x86_64.AppImage
@@ -63,7 +67,6 @@ jobs:
         sudo mv appimage-builder-x86_64.AppImage /usr/local/bin/appimage-builder
     - name: Build appimage
       run: |
-        echo "PWD: ${PWD}"
         appimage-builder --recipe AppImageBuilder.yml --skip-test
     #     flutter --version
     # - name: Build AppImage using appimage-builder
