--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -35,6 +35,8 @@ jobs:
       if: github.event_name == 'push'
       shell: bash
       run: |
+        set -e
+        set -x
         TAG=${GITHUB_REF#refs/tags/}
         if [[ ! "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
           echo "::error::Invalid tag format: $TAG (must match vX.Y.Z)"
@@ -44,6 +46,8 @@ jobs:
     - name: Update Mapiah version in AppImageBuilder.yml
       shell: bash
       run: |
+        set -e
+        set -x
         TAG="${{ github.event_name == 'push' && github.ref_name || github.event.inputs.test_tag }}"
         TAG_NUMBER="${TAG#v}"
         sed -i "/^AppDir:/,/^[^ ]/s/^\( *version: *\).*/\1$TAG_NUMBER/" AppImageBuilder.yml
@@ -54,19 +58,27 @@ jobs:
         flutter-version: 3.32.4
     - name: Install dependencies
       run: |
+        set -e
+        set -x
         sudo apt-get update
         sudo apt-get install -y appstream appstream-util libappstream-glib8 clang cmake ninja-build fuse pkg-config libgtk-3-dev libglu1-mesa
     - name: Build flutter app
       run: |
-          flutter config --enable-linux-desktop
-          flutter build linux --release
+        set -e
+        set -x
+        flutter config --enable-linux-desktop
+        flutter build linux --release
     - name: Set up appimage
       run: |
+        set -e
+        set -x
         curl -L -o appimage-builder-x86_64.AppImage https://github.com/AppImageCrafters/appimage-builder/releases/download/v1.1.0/appimage-builder-1.1.0-x86_64.AppImage
         chmod +x appimage-builder-x86_64.AppImage
         sudo mv appimage-builder-x86_64.AppImage /usr/local/bin/appimage-builder
     - name: Build appimage
       run: |
+        set -e
+        set -x
         appimage-builder --recipe AppImageBuilder.yml --skip-test
     #     flutter --version
     # - name: Build AppImage using appimage-builder
@@ -84,6 +96,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       shell: bash
       run: |
+        set -e
+        set -x
         TAG="${{ github.event_name == 'push' && github.ref_name || github.event.inputs.test_tag }}"
         TAG_NUMBER="${TAG#v}"
         TITLE="Mapiah $TAG"
