--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v4
     # - uses: subosito/flutter-action@v1
@@ -34,6 +34,7 @@ jobs:
     # - name: Build flutter app
     #   run: flutter build linux --release
      # Only validate tag format for automatic runs
+
     - name: Validate tag (automatic runs only)
       if: github.event_name == 'push'
       shell: bash
@@ -46,6 +47,7 @@ jobs:
           exit 1
         fi
         echo "Validated tag: $TAG"
+
     - name: Update Mapiah version in AppImageBuilder.yml
       shell: bash
       run: |
@@ -54,23 +56,28 @@ jobs:
         TAG="${{ github.event_name == 'push' && github.ref_name || github.event.inputs.test_tag }}"
         TAG_NUMBER="${TAG#v}"
         sed -i "/^AppDir:/,/^[^ ]/s/^\( *version: *\).*/\1$TAG_NUMBER/" AppImageBuilder.yml
+
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
         channel: stable
         flutter-version: 3.32.4
+
     - name: Install dependencies
       run: |
         set -e
         set -x
         sudo apt-get update
         sudo apt-get install -y appstream appstream-util libappstream-glib8 clang cmake ninja-build fuse pkg-config libgtk-3-dev libglu1-mesa
+
     - name: Build flutter app
       run: |
         set -e
         set -x
+        flutter --version
         flutter config --enable-linux-desktop
         flutter build linux --release
+
     - name: Set up appimage
       run: |
         set -e
@@ -78,6 +85,7 @@ jobs:
         curl -L -o appimage-builder-x86_64.AppImage https://github.com/AppImageCrafters/appimage-builder/releases/download/v1.1.0/appimage-builder-1.1.0-x86_64.AppImage
         chmod +x appimage-builder-x86_64.AppImage
         sudo mv appimage-builder-x86_64.AppImage /usr/local/bin/appimage-builder
+
     - name: Build appimage
       run: |
         set -e
@@ -89,11 +97,13 @@ jobs:
     #   with:
     #     recipe: "./AppImageBuilder.yml"
     #     args: "--skip-test"
+
     - name: Save build Artifact
       uses: actions/upload-artifact@v4
       with:
         name: AppImage
         path: './*.AppImage*'
+
     - name: Publish Release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
