--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -19,21 +19,8 @@ jobs:
     name: Build
     runs-on: ubuntu-22.04
     steps:
-    - uses: actions/checkout@v4
-    # - uses: subosito/flutter-action@v1
-    #   with:
-    #     flutter-version: '3.32.4'
-    # - run: flutter config --enable-linux-desktop
-    # - name: "Install dependencies"
-    #   run: |
-    #     sudo apt-get update
-    #     sudo apt-get install -y appstream appstream-util libappstream-glib8 fuse libfuse2 gpg clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev curl git unzip xz-utils zip libglu1-mesa vim sudo
-    #     curl -L -o appimage-builder-x86_64.AppImage https://github.com/AppImageCrafters/appimage-builder/releases/download/v1.1.0/appimage-builder-1.1.0-x86_64.AppImage
-    #     chmod +x appimage-builder-x86_64.AppImage
-    #     sudo mv appimage-builder-x86_64.AppImage /usr/local/bin/appimage-builder
-    # - name: Build flutter app
-    #   run: flutter build linux --release
-     # Only validate tag format for automatic runs
+    - name: Checkout code
+      uses: actions/checkout@v4
 
     - name: Validate tag (automatic runs only)
       if: github.event_name == 'push'
