Flatpak release: running flatpak with --noninteractive

--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -52,9 +52,9 @@ jobs:
       run: |
         set -e
         set -x
-        flatpak remote-add --user --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-        flatpak install --user -y org.freedesktop.Sdk/x86_64/24.08
-        flatpak install --user flathub org.flatpak.Builder
+        flatpak remote-add --user --noninteractive --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+        flatpak install --user --noninteractive org.freedesktop.Sdk/x86_64/24.08
+        flatpak install --user --noninteractive flathub org.flatpak.Builder
 
     - name: Build flutter app
       run: |
