Flatpak release: removing --noninteractive from remote-add

--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -52,7 +52,7 @@ jobs:
       run: |
         set -e
         set -x
-        flatpak remote-add --user --noninteractive --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+        flatpak remote-add --user --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
         flatpak install --user --noninteractive org.freedesktop.Sdk/x86_64/24.08
         flatpak install --user --noninteractive flathub org.flatpak.Builder
 
