--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -46,7 +46,7 @@ jobs:
         set -e
         set -x
         sudo apt-get update
-        sudo apt-get install -y appstream appstream-util flatpak libappstream-glib8 clang cmake ninja-build fuse pkg-config libgtk-3-dev libglu1-mesa
+        sudo apt-get install -y appstream appstream-util flatpak flatpak-builder libappstream-glib8 clang cmake ninja-build pkg-config libgtk-3-dev libglu1-mesa
 
     - name: Build flutter app
       run: |
@@ -55,18 +55,6 @@ jobs:
         flutter --version
         flutter config --enable-linux-desktop
         flutter build linux --release
-
-    - name: Create flatpak tar.gz
-      run: |
-        set -e
-        set -x
-        BASEDIR=$(pwd)
-        ARCHIVE_NAME="mapiah.flatpak.tar.gz"
-        cd build/linux/x64/release/bundle
-        rm -f "$ARCHIVE_NAME"
-        tar -czaf "$ARCHIVE_NAME" ./*
-        mv "$ARCHIVE_NAME" "$BASEDIR"/
-        cd "$BASEDIR"
 
     - name: Prepare Flatpak package
       run: |
@@ -98,16 +86,14 @@ jobs:
 
         cp "packaging/linux/flatpak/built-locally/$projectId.yml" .
 
-        SHA=$(sha256sum mapiah.flatpak.tar.gz | awk '{print $1}')
-        sed -i "/url:.*mapiah\.flatpak\.tar\.gz/,/sha256:/s/\\(sha256: *\\).*/\\1$SHA/" org.mapiah.mapiah.yml
-
-    - name: Install Flatpak Builder
+    - name: Install Flatpak Builder dependencies
       run: |
         set -e
         set -x
-        flatpak remote-add --user --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-        flatpak install --user --noninteractive org.freedesktop.Sdk/x86_64/24.08
-        flatpak install --user --noninteractive flathub org.flatpak.Builder
+        sudo flatpak remote-add --system --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+        sudo flatpak install --system --noninteractive org.freedesktop.Sdk/x86_64/24.08
+        sudo flatpak install --system --noninteractive flathub org.freedesktop.Platform/x86_64/24.08
+        sudo flatpak install --system --noninteractive flathub org.freedesktop.Sdk.Extension.llvm19
 
     - name: Setup upterm session
       uses: lhotari/action-upterm@v1
@@ -118,7 +104,7 @@ jobs:
       run: |
         set -e
         set -x
-        flatpak run org.flatpak.Builder --force-clean --repo=repo --install-deps-from=flathub --install-deps-from=remote org.mapiah.mapiah.yml build-dir
+        flatpak-builder --force-clean --repo=repo build-dir "$PWD/org.mapiah.mapiah.yml"
 
     - name: Update Mapiah version in flatpak manifest
       uses: actions/checkout@v4
