--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -42,11 +42,10 @@ jobs:
         flutter-version: 3.32.4
 
     - name: Install dependencies
-      run: |
-        set -e
-        set -x
-        sudo apt-get update
-        sudo apt-get install -y appstream appstream-util flatpak flatpak-builder libappstream-glib8 clang cmake ninja-build pkg-config libgtk-3-dev libglu1-mesa
+      uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: appstream appstream-util flatpak flatpak-builder libappstream-glib8 clang cmake ninja-build pkg-config libgtk-3-dev libglu1-mesa
+        version: 1.0
 
     - name: Build flutter app
       run: |
