Flatpak release automation: using action to build flatpak

--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -93,16 +93,17 @@ jobs:
         sudo flatpak install --system --noninteractive flathub org.freedesktop.Platform/x86_64/24.08
         sudo flatpak install --system --noninteractive flathub org.freedesktop.Sdk.Extension.llvm19
 
-    - name: Setup upterm session
-      uses: lhotari/action-upterm@v1
-      with:
-        limit-access-to-actor: true
+    # - name: Setup upterm session
+    #   uses: lhotari/action-upterm@v1
+    #   with:
+    #     limit-access-to-actor: true
 
-    - name: Build Flatpak package
-      run: |
-        set -e
-        set -x
-        flatpak-builder --force-clean --repo=repo build-dir "$PWD/org.mapiah.mapiah.yml"
+    - name: Build Mapiah flatpak
+      uses: flatpak/flatpak-github-actions/flatpak-builder@v6
+      with:
+        bundle: palette.flatpak
+        manifest-path: org.mapiah.mapiah.yml
+        cache-key: flatpak-builder-${{ github.sha }}
 
     - name: Update Mapiah version in flatpak manifest
       uses: actions/checkout@v4
