--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -93,6 +93,11 @@ jobs:
         sudo flatpak install --system --noninteractive flathub org.freedesktop.Platform/x86_64/24.08
         sudo flatpak install --system --noninteractive flathub org.freedesktop.Sdk.Extension.llvm19
 
+    - name: Setup upterm session
+      uses: lhotari/action-upterm@v1
+      with:
+        limit-access-to-actor: true
+
     - name: Build Mapiah flatpak
       run: |
         set -e
@@ -135,8 +140,3 @@ jobs:
             --clobber \
             "$INSTALLER"
         fi
-
-    # - name: Setup upterm session
-    #   uses: lhotari/action-upterm@v1
-    #   with:
-    #     limit-access-to-actor: true
