Flatpak release automation: installing flatpak and flatpak-builder latest versions and disabling debug

--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Install dependencies
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
-        packages: appstream appstream-util appstream-compose flatpak flatpak-builder libappstream-glib8 clang cmake ninja-build pkg-config libgtk-3-dev libglu1-mesa
+        packages: appstream appstream-util appstream-compose libappstream-glib8 clang cmake ninja-build pkg-config libgtk-3-dev libglu1-mesa
         version: 1.0
 
     - name: Build flutter app
@@ -84,6 +84,14 @@ jobs:
 
         cp "packaging/linux/flatpak/built-locally/$projectId.yml" .
 
+    - name: Install flatpak and flatpak-builder latest versions
+      run: |
+        set -e
+        set -x
+        sudo add-apt-repository -y ppa:flatpak/stable
+        sudo apt-get update
+        sudo apt-get install -y flatpak flatpak-builder
+
     - name: Install Flatpak Builder dependencies
       run: |
         set -e
@@ -93,10 +101,10 @@ jobs:
         sudo flatpak install --system --noninteractive flathub org.freedesktop.Platform/x86_64/24.08
         sudo flatpak install --system --noninteractive flathub org.freedesktop.Sdk.Extension.llvm19
 
-    - name: Setup upterm session
-      uses: lhotari/action-upterm@v1
-      with:
-        limit-access-to-actor: true
+    # - name: Setup upterm session
+    #   uses: lhotari/action-upterm@v1
+    #   with:
+    #     limit-access-to-actor: true
 
     - name: Build Mapiah flatpak
       run: |
